tdc.css
/* ... */
  .my-legend a {
    color: #777;
    }

.btn-round {
    border-radius: 18px;
    width: 100px;
    font-size: 10px;
}

.btn-right{
	margin-left: -10px;
    padding-left: 25px;
}
.btn-left{
	margin-right: -10px;
    padding-right: 25px;
}
button:active { outline: none !important; }
button:change { outline: none !important;}
button.change:hover { outline: none !important;}
button:focus { outline:0 !important; }
.sn-kpi .sn-kpi-ellips-text {
    color: white;
}
.OverviewDonutChart {
    margin-top: -37px;
    display: inline-grid;
}
.title-wrapper {
    color: white !important;
}
.card-actions.qliksense-card{
	border: none !important;
}

.qv-object-text-image .qv-media-tool-html {
    font-size: 30px;
}
/* qlik visulaization overrides*/
#header.row {
display:none
}
.qv-pt-meta-button {

    display: none !important

}
.qv-collapsed-listbox .qv-state-count-bar{
    height:1px;
}
table.ng-scope {
    border-collapse: separate;
}
header.qv-object-header.thin {
    height: 0px !important;
}

.qv-pt .cell.header.left {
color:white;
border:none !important
}
th.cell.ng-scope.header.empty.left-meta.bottom-meta{
color:white;
border:none !important
}
table.ng-scope th {
    border: none !important;
}
table.ng-scope td {
    border: none !important;
}
.qv-pt tbody, .qv-pt tr{
color:white;
}
/*********************************/

paper-card.style-scope.header-card.x-scope.paper-card-0{
box-shadow: none;
	  border-radius: 12px;
	  background-color:RGB(19,28,56,0);
}

.paper-toolbar-0 {
    background-image: url(1.png) !important;
    background-size: 100%;
    background-repeat: no-repeat;
    background-color: RGB(39,46,74);
}
paper-card.style-scope.qliksense-card.x-scope.paper-card-0 {
    box-shadow: none;
	  border-radius: 12px;
	  background-color:RGB(19,28,56);

}

#QV1-02{
background-color:  RGB(39,46,74,0) !important;
}
.qv-object-barchart {
    background-color: #00000000 !important;
	color: white !important;
}
.qv-object-content-container{
	color: white !important;
	background-color: #00000000 !important;
}
.qv-inner-object{
	background-color: #00000000 !important;
	color: white !important;
}
.qv-ti ng-scope{
	
	color: white !important;
}
.qva-chart-data-title-align ellips-text{
	color:white
	
}
.interactive.ng-isolate-scope.ng-scope.qv-collapsed-listbox {
    background-color: rgba(0,0,0,0) !important;
}
div.single-object #content {
    padding: 0;
}
.qv-listbox li {
color:black;
}

.qv-collapsed-listbox {
    border: none;
}

.row {
    margin-bottom: 0px;
}

/* LUI */
.lui-popover-container {
    z-index: 10004;
}

/*Qlik objects*/
.qvplaceholder, .qvobject {
    width: 100%;
    height: 100%;
}

.qv-object{
    padding: 0px;
    background-color: transparent;
}
.qv-object-kpi{
    padding: 0px;
}
.qv-object *{
    font-family: 'Source Sans Pro', sans-serif;
}

.listbox-wrapper .qv-object{
    padding: 0px;
}

/*KPIs*/
.kpi {
    height: 6vw;
    max-height: 180px;
    min-height: 80px;
    /*background: #fff;*/
    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
    border-radius: 12px;
    color: #fff;
    margin-bottom: 15px;
	background-color:RGB(19,28,56);

}
.kpi article{
     width: 80%;
}
.kpi-row{
    margin-bottom: 15px;
}
.kpi-side{
    position: absolute;
    right: 20px;
    top: 50%;
    margin-top: -25px;
    width: 40px;
    height: 40px;
}
.kpi-side i{
    font-size: 40px;
    opacity: .2;
    color: #fff;
}
.qv-object-kpi .kpi-data{
    align-items: flex-start;
    padding-left: 15px;
}

#KPI-01 .kpi-value{
    color: #fff !important;
}
#KPI-02 .kpi-value{
    color: #fff!important;
}
#KPI-03 .kpi-value{
    color: #fff!important;
}
#KPI-04 .kpi-value{
    color: #fff!important;
}

/*Get rid of rounded borders on qliksense objects*/
/*.qv-object, .sel-toolbar-card, .qv-object.qv-selections-active {
    -webkit-border-top-left-radius: 0;
    -moz-border-radius-topleft: 0;
    border-top-left-radius: 0;
    -webkit-border-top-right-radius: 0;
    -moz-border-radius-topright: 0;
    border-top-right-radius: 0;
    
    -webkit-border-bottom-left-radius: 0;
    -moz-border-radius-bottomleft: 0;
    border-bottom-left-radius: 0;
    -webkit-border-bottom-right-radius: 0;
    -moz-border-radius-bottomright: 0;
    border-bottom-right-radius: 0;
}
*/
/*adjusting active chart borders*/
.sel-toolbar-card{
    border: 1px solid #ccc;
    border-bottom: 1px solid #D9D9D9;
}
.qv-object.qv-selections-active{
    border: 1px solid #ccc;
    border-top: 1px solid #D9D9D9;
}

/*Qlik Contextual */
.qui-immidiateContextual {
    z-index: 10004;
}

/*Selection toolbar */
#CurrentSelections {
    position:relative; 
    top:0; 
    left:0; 
    width:100%; 
    height:35px;
}
.buttons-end.borderbox {
    width: 45px;
}
.buttons-end.borderbox button:nth-child(2) {
    display: none;
}
.qv-panel-current-selections .qv-selections-pager {
    padding-right: 45px;
}
.current-selections-placeholder {
    height: 36px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(84, 83, 82);
    color: rgba(255, 255, 255, 0.6);
}
.current-selections-placeholder span {
    display: none;
}

.qv-panel-current-selections .qv-selections-pager {
    padding-left: 0 !important;
    padding-right: 0 !important;
}

@media (max-width: 767px) {
    .buttons.borderbox {
        width: 45px;
    }
    .buttons.borderbox button:nth-child(1), .buttons.borderbox button:nth-child(2) {
        display: none;
    }
    .qv-panel-current-selections .qv-selections-pager {
        padding-left: 45px;
    }
    .col-xs-12{
        margin-bottom: 15px;
    }
    .drawer-title{
        height: 56px !important;
    }
    .kpi-row{
        margin-bottom: 0px;
    }
    .row{
        margin-bottom: 0;
    }
}


/*Fix selection toolbar options placement*/
.qv-panel-current-selections .remove, .qv-panel-current-selections .unlock, .qv-panel-current-selections .lock {
    width: 20px;
}
.lui-clear-all {
    line-height: 36px;
}
/* ... */

